2006-01-22  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: (update_syntax),
	(verify_parent), (verify_sequence), (verify_tree): if
	ENABLE_VERIFY_TREE is defined the engine verifies the tree coherency
	* gtksourceview/gtksourcecontextengine.c: (context_last),
	(context_append_child), (join_contexts_tree): call
	context_set_last_sibling() when needed
	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcecontextengine.h: keep the private data in
	GtkSourceContextEngine->priv
	* gtksourceview/gtksourcecontextengine.c:
	(gtk_source_context_engine_attach_buffer), (context_new),
	(container_context_starts_here), (simple_context_starts_here): removed
	end_at argument from context_new() as it is always END_NOT_YET_FOUND

2006-01-19  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: added some documentation
	* gtksourceview/gtksourcecontextengine.c: (regex_get_pattern): do not
	crash if the regex is unresolved
	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcelanguage-parser-2.c: removed declarations mixed
	with code

2006-01-16  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcelanguage-parser-1.c: (build_keyword_list):
	use "(?i:)" syntax to have case insensitive keywords instead of
	gtk_source_regex_case_insesitive_keyword()
	* configure.in, docs/reference/Makefile.am, gtksourceview/Makefile.am,
	gtksourceview/gnu-regex/*, gtksourceview/gtksourcelanguage-parser-1.c,
	gtksourceview/gtksourcelanguage-parser-2.c,
	gtksourceview/gtksourceregex.c, gtksourceview/gtksourceregex.h,
	gtksourceview/gtksourcetag-private.h: removed GtkSourceRegex and
	gnu-regex

2006-01-15  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcesimpleengine.c: use EggRegex instead of
	gnu-regex

2006-01-11  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: cache the last child of the