@@ -1,3 +1,9 @@
+2006-01-25  Marco Barisione  <barisione@gmail.com>
+
+	* gtksourceview/gtksourcecontextengine.c: (context_set_last_sibling),
+	(context_last), (split_contexts_tree), (join_contexts_tree): the last
+	sibling was set before reparenting the contexts
+
 2006-01-22  Marco Barisione  <barisione@gmail.com>
 
 	* gtksourceview/gtksourcecontextengine.c: (update_syntax),
